# PiWatch

./: .gitignore  Cargo.toml
crates/agent/: Cargo.toml
crates/agent/src/: api_client.rs  config.rs  main.rs  network.rs  network.rs.bak
crates/core/: Cargo.toml
crates/core/src/: lib.rs
crates/core/src/config/: log.rs
crates/core/src/dto/: heart_beat.rs  mod.rs  register_payload.rs  update_id.rs
crates/server/: Cargo.toml
crates/server/src/: config.rs  main.rs
crates/server/src/dto/: agent_summary.rs  mod.rs
crates/server/src/handler/: agent.rs  heart_beat.rs  metric.rs  mod.rs
crates/server/src/model/: state.rs
crates/server/src/pihole/: client.rs  dto.rs
