[package]
name = "PiWatch"
version = "0.1.0"
edition = "2024"

[dependencies]
core = { path = "../core" }
axum = "0.8"
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
dashmap = "6"
tracing = "0.1"
tracing-subscriber = "0.3"
reqwest = { version = "0.13", features = ["json"] }
url = "2"

[[bin]]
name = "PiWatch"
path = "src/main.rs"

[profile.release]
strip = true
lto = true
codegen-units = 1